// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-sc-1mhg460-0 duLDxE"
    data-testid="Avatar"
  />
</DocumentFragment>
`;

exports[`Avatar should render with custom size 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-sc-1mhg460-0 dRflak"
    data-testid="Avatar"
  />
</DocumentFragment>
`;

exports[`Avatar should render without shadow 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-sc-1mhg460-0 iwcrVr"
    data-testid="Avatar"
  />
</DocumentFragment>
`;
